--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -253,7 +253,6 @@
   margin-bottom: 1rem;
   width: 100%;
   display: flex;
-  flex-direction: column;
 }
 
 .table-title {
